fix modal z-index issue

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -72,7 +72,7 @@
 }
 
 .modal-wrapper {
-  z-index: 10;
+  z-index: 1002;
   opacity: 0;
   pointer-events: none;
   position: fixed;
